grammar.js
    source_file: $ => seq(
      any_amount_of($._definition),
      optional("\0")
    ),

    _definition: $ => seq(
      $._statement,
    ),

    _expression: $ => choice(
      $.new_expression,
      $.ternary_expression,
      $.null_coalescing_expression,
      $.type_cast_expression,
      $.parenthesized_expression,
      $.prefix_exp,
      $.literal,
      $.binary_expression,
      $.unary_expression,
      $.tagged_template_string,
      $.annonymous_sub,
      $.annonymous_function
    ),

    assignment_statement: $ => prec(PREC.ASSIGNMENT, seq(
      field('left', $.variable_declarator),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '\\=', '<<=', '>>=')),
      field('right', $._expression)
    )),

    _prefix_exp: ($) =>
      choice(
        $._var,
        $.function_call
      ),

    prefix_exp: ($) => $._prefix_exp,

    function_call: $ => prec.right(1,seq(
      field('function', $.prefix_exp),
      field('arguments', $.parenthesized_expression)
    )),

    variable_declarator: ($) => $._var,

    _var: ($) =>
      prec.right(1, choice(
        $.identifier,
        seq($.prefix_exp, choice('[', '?['), commaSep1($._expression), ']'),
        seq($.prefix_exp, choice('.', '?.'), $.identifier),
        seq($.prefix_exp, '@.', $.identifier),
      )),

    // Expressions
    binary_expression: $ => choice(
      $.logical_expression,
      $.comparison_expression,
      $.arithmetic_expression
    ),

    logical_expression: $ => prec.left(PREC.LOGICAL, choice(
      seq(field('left', $._expression), field('operator', $.and), field('right', $._expression)),
      seq(field('left', $._expression), field('operator', $.or),  field('right', $._expression))
    )),

    comparison_expression: $ => prec.left(PREC.COMPARISON, choice(
      seq(field('left', $._expression), field('operator', '='),   field('right', $._expression)),
      seq(field('left', $._expression), field('operator', '<>'),  field('right', $._expression)),
      seq(field('left', $._expression), field('operator', '<'),   field('right', $._expression)),
      seq(field('left', $._expression), field('operator', '<='),  field('right', $._expression)),
      seq(field('left', $._expression), field('operator', '>'),   field('right', $._expression)),
      seq(field('left', $._expression), field('operator', '>='),  field('right', $._expression)),
    )),

    arithmetic_expression: $ => choice(
      $.additive_expression,
      $.multiplicative_expression
    ),

    additive_expression: $ => prec.left(PREC.ADDITIVE, choice(
      seq(field('left', $._expression), field('operator', '+'), field('right', $._expression)),
      seq(field('left', $._expression), field('operator', '-'), field('right', $._expression))
    )),

    multiplicative_expression: $ => prec.left(PREC.MULTIPLICATIVE, choice(
      seq(field('left', $._expression), field('operator', '*'),  field('right', $._expression)),
      seq(field('left', $._expression), field('operator', '/'),  field('right', $._expression)),
      seq(field('left', $._expression), field('operator', '\\'),  field('right', $._expression)),
      seq(field('left', $._expression), field('operator', $.mod), field('right', $._expression))
    )),

    ternary_expression: $ => prec.right(PREC.TERNARY, seq(
      field('condition', choice($.binary_expression, $.prefix_exp, $.literal, $.unary_expression)),
      '?',
      field('consequence', $._expression),
      ':',
      field('alternative', $._expression)
    )),

    null_coalescing_expression: $ => prec.left(PREC.NULL_COALESCE, seq(
      field('left', $._expression),
      '??',
      field('right', $._expression)
    )),

    new_expression: $ => prec.right(5, seq(
      alias(/new/i, $.new),
      field('class', $.dotted_identifier),
      field('arguments', $.parenthesized_expression)
    )),

    parenthesized_expression: $ => seq(
      '(',
      commaSep($._expression),
      ')'
    ),

    literal: $ => choice(
      $.invalid,
      $.boolean,
      $.number,
      $.string,
      $.template_string,
      $.regex_literal,
      $.source_literal,
      $.array,
      $.assoc_array
    ),

    boolean: $ => choice(
      /true/i,
      /false/i
    ),

    number: $ => /-?\d+(\.\d+)?/,

    string: $ => seq(
      '"',
      repeat(choice(
        alias(/[^"]+/, $.string_contents),
        alias(seq('""'), $.escaped_quote)
      )),
      '"'
    ),

    string_contents: $ => /[^"]*/,

    // Template strings (backtick strings with ${} interpolation)
    invalid: $ => /invalid/i,

    array: $ => seq(
      '[',
      optional(commaSep($._expression)),
      ']'
    ),

    assoc_array: $ => seq(
      '{',
        optional(commaSepNewLine($.assoc_array_element)),
      '}'
    ),

    and: $ => /and/i,
    new: $ => /new/i,

    dotted_identifier: $ => seq(
      $.identifier,
      repeat(seq('.', $.identifier))
    ),

    identifier: $ => choice($.m, $.regular_identifier),
    m: $ => /m/i,
    regular_identifier: $ => token(prec(0, /[a-zA-Z_][a-zA-Z0-9_]*/)),
  }
});

function commaSep(rule) {
  return optional(
    seq(
      rule,
      repeat(
        seq(
          ',',
          rule
        )
      )
    )
  )
}

function commaSepNewLine(rule) {
  return optional(
    seq(
      rule,
      repeat(
        seq(
          optional(','),
          rule
        )
      )
    )
  )
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

function any_amount_of() {
  return repeat(seq(...arguments));
}
